--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "The_Liquor_Cabinet",
+  "name": "theliquorcabinet",
   "version": "1.0.0",
   "engines": {
     "node": "14.3.0"
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.22"
